# tagged-id

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix
derive/: Cargo.toml
src/: lib.rs  serde.rs  smartstring.rs  sqlx.rs  uuid.rs
src/sqlx/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
tagged-id-derive/: Cargo.toml
tagged-id-derive/src/: lib.rs
tests/fail/: not_copy.rs  not_copy.stderr  not_tagged_eq.rs  not_tagged_eq.stderr  not_take_twice.rs  not_take_twice.stderr
