[workspace]
members = ["derive"]

[package]
name = "tagged-id"
version = "0.3.0"
edition = "2021"
authors = ["Bertrand Bousquet <b.kamek@gmail.com>"]
description = "A zero-cost wrapper adding type-safety to resource identifiers."
license = "MIT"
repository = "https://github.com/kamek-pf/tagged-id"
homepage = "https://github.com/kamek-pf/tagged-id"

[features]
default = ["derive"]
derive = ["tagged-id-derive", "serde?/derive"]
smartstring = ["dep:smartstring"]
uuid = ["dep:uuid"]
serde = ["dep:serde", "smartstring?/serde", "uuid?/serde"]
sqlx-postgres = ["dep:sqlx", "sqlx/postgres"]
sqlx-mysql = ["dep:sqlx", "sqlx/mysql"]
sqlx-sqlite = ["dep:sqlx", "sqlx/sqlite"]

[dependencies]
serde = { version = "1.0", optional = true }
smartstring = { version = "1.0", optional = true }
sqlx = { version = "0.8", optional = true, default-features = false }
uuid = { version = "1.10", optional = true, default-features = false }
tagged-id-derive = { path = "derive", version = "0.1", optional = true }

[dev-dependencies]
serde_json = "1.0"
trybuild = "1.0"
