[package]
name = "tagged-id-derive"
version = "0.1.0"
edition = "2021"
authors = ["Bertrand Bousquet <b.kamek@gmail.com>"]
description = "Derive macro implementation for tagged-id"
license = "MIT"
repository = "https://github.com/kamek-pf/tagged-id"
homepage = "https://github.com/kamek-pf/tagged-id"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
